// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SQLCount should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.sqlCount.title
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
        color="[\\"#fbd44d\\",\\"#42a2ff\\"]"
        colorfield="type"
        data="[{\\"type\\":\\"\\",\\"value\\":0}]"
        height="200"
        innerradius="0.8"
        legend="{\\"position\\":\\"right\\",\\"layout\\":\\"vertical\\",\\"animate\\":true}"
        locale="zh-CN"
        maxangle="360"
        radius="1"
        theme="light"
        xfield="type"
        yfield="value"
      />
    </div>
  </div>
</div>
`;

exports[`test SQLCount should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.sqlCount.title
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
        color="[\\"#fbd44d\\",\\"#42a2ff\\"]"
        colorfield="type"
        data="[{\\"type\\":\\"projectManage.projectOverview.sqlCount.riskSQL\\",\\"value\\":420},{\\"type\\":\\"projectManage.projectOverview.sqlCount.SQLCount\\",\\"value\\":1200}]"
        height="200"
        innerradius="0.8"
        legend="{\\"position\\":\\"right\\",\\"layout\\":\\"vertical\\",\\"animate\\":true}"
        locale="zh-CN"
        maxangle="360"
        radius="1"
        theme="light"
        xfield="type"
        yfield="value"
      />
    </div>
  </div>
</div>
`;

exports[`test SQLCount should render error message 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.sqlCount.title
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
        style="padding: 0px;"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
